@@ -28,6 +28,7 @@ export(get_tract_map)
 export(state_choropleth)
 export(state_choropleth_acs)
 export(tract_choropleth)
+export(visualize_df_by_race_ethnicity_party)
 importFrom(Hmisc,cut2)
 importFrom(R6,R6Class)
 importFrom(RgoogleMaps,MaxZoom)
@@ -50,6 +51,7 @@ importFrom(ggplot2,coord_map)
 importFrom(ggplot2,coord_quickmap)
 importFrom(ggplot2,coord_sf)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_polygon)
 importFrom(ggplot2,geom_sf)
 importFrom(ggplot2,geom_text)
@@ -62,6 +64,7 @@ importFrom(ggplot2,scale_colour_brewer)
 importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,scale_fill_continuous)
 importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
@@ -78,6 +81,7 @@ importFrom(stringr,str_extract_all)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_replace)
 importFrom(tidycensus,get_acs)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
 importFrom(tidyr,unite)
 importFrom(tigris,tracts)
